--- a/Webpage.html
+++ b/Webpage.html
@@ -1287,8 +1287,8 @@
 
         var csv, csv2;
         // Get data for the portal to show visualizations
-        d3.csv("https://csvfiles194622-test.s3.amazonaws.com/RAW_Data.csv", function(data1) { 
-            d3.csv("https://csvfiles194622-test.s3.amazonaws.com/RAW_Data_M.csv", function(data2) {
+        d3.csv("URL2", function(data1) { 
+            d3.csv("URL1", function(data2) {
                 csv = data1;
                 csv2=data2;
                 startrender();
